syntax = "proto3";

package icon.v1;

option go_package = "github.com/dietzy1/chatapp/services/icon/proto/icon/v1;iconv1";

service IconService {
  //get by uuid
  rpc GetIcon(GetIconRequest) returns (GetIconResponse) {}

  //get by owner uuid
  rpc GetIcons(GetIconsRequest) returns (GetIconsResponse) {}

  //return all emoji icons
  rpc GetEmojiIcons(GetEmojiIconsRequest) returns (GetEmojiIconsResponse) {}

  rpc DeleteIcon(DeleteIconRequest) returns (DeleteIconResponse) {}

  rpc UploadIcon(stream UploadIconRequest) returns (UploadIconResponse) {}
}

message Icon {
  string link = 1;
  string uuid = 2;
  string kindof = 3;
  string owner_uuid = 4;
}

message GetIconRequest {
  string uuid = 1;
}

message GetIconResponse {
  Icon icon = 1;
}

message GetIconsRequest {
  string owner_uuid = 1;
}

message GetIconsResponse {
  repeated Icon icons = 1;
}

message GetEmojiIconsRequest {}

message GetEmojiIconsResponse {
  repeated Icon icons = 1;
}


message DeleteIconRequest {
  string uuid = 1;
  string owner_uuid = 2;
}

message DeleteIconResponse {}

message UploadIconRequest {
    oneof data {
      ImageInfo info = 1;
      bytes chunk_data = 2;
    }
  }
  
  message UploadIconResponse {
    string link = 1;
    string uuid = 2;
  }
  
  message ImageInfo {
    string kindof = 1;
    string owner_uuid = 2;
  }
  
  message GetAvatarsRequest {}
  
  message GetAvatarsResponse {
    repeated Icon icons = 1;
  }